keycloack/network/vpc.yaml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: This template creates a Multi-AZ, multi-subnet VPC infrastructure with managed NAT gateways in the public subnet for each Availability Zone. You can also create additional private subnets with dedicated custom network access control lists (ACLs) - (SO0051).
Metadata:
  AWS::CloudFormation::Interface:
    ##############################
    #      ParameterGroups       #
    ##############################
    ParameterGroups:
      - Label:
          default: Availability Zone Configuration
        Parameters:
          - AvailabilityZones
          - NumberOfAZs
      - Label:
          default: Network Configuration
        Parameters:
          - VPCCIDR
          - CreatePublicSubnets
          - CreatePrivateSubnets
          - PrivateSubnet1ACIDR
          - PrivateSubnet2ACIDR
          - PrivateSubnet3ACIDR
          - PrivateSubnet4ACIDR
          - PublicSubnet1CIDR
          - PublicSubnet2CIDR
          - PublicSubnet3CIDR
          - PublicSubnet4CIDR
          - LogsRetentionInDays
      - Label:
          default: Additional Network
        Parameters:
          - CreateAdditionalPrivateSubnets
          - PrivateSubnet1BCIDR
          - PrivateSubnet2BCIDR
          - PrivateSubnet3BCIDR
          - PrivateSubnet4BCIDR
      - Label:
          default: Connectivity Parameters
        Parameters:
          - TransitVPC
          - InOutNetwork
    ##############################
    #      ParameterLabels       #
    ##############################
    ParameterLabels:
      AvailabilityZones:
        default: Availability Zones
      CreateAdditionalPrivateSubnets:
        default: Create additional private subnets with dedicated network ACLs
      CreatePrivateSubnets:
        default: Create private subnets
      CreatePublicSubnets:
        default: Create public subnets
      NumberOfAZs:
        default: Number of Availability Zones
      PrivateSubnet1ACIDR:
        default: Private subnet 1A CIDR
      PrivateSubnet1BCIDR:
        default: Private subnet 1B with dedicated network ACL CIDR
      PrivateSubnet2ACIDR:
        default: Private subnet 2A CIDR
      PrivateSubnet2BCIDR:
        default: Private subnet 2B with dedicated network ACL CIDR
      PrivateSubnet3ACIDR:
        default: Private subnet 3A CIDR
      PrivateSubnet3BCIDR:
        default: Private subnet 3B with dedicated network ACL CIDR
      PrivateSubnet4ACIDR:
        default: Private subnet 4A CIDR
      PrivateSubnet4BCIDR:
        default: Private subnet 4B with dedicated network ACL CIDR
      PublicSubnet1CIDR:
        default: Public subnet 1 CIDR
      PublicSubnet2CIDR:
        default: Public subnet 2 CIDR
      PublicSubnet3CIDR:
        default: Public subnet 3 CIDR
      PublicSubnet4CIDR:
        default: Public subnet 4 CIDR
      VPCCIDR:
        default: VPC CIDR
      LogsRetentionInDays:
        default: Flow Logs Retention In Days
      TransitVPC:
        default: Connect to transit VPC
      InOutNetwork:
        default: Use Inbound Outbound connectivity
##############################
#        Parameters          #
##############################
Parameters:
  AvailabilityZones:
    Description: 'List of Availability Zones to use for the subnets in the VPC.'
    Type: CommaDelimitedList
  CreateAdditionalPrivateSubnets:
    Description: Set to true to create a network ACL protected subnet in each Availability Zone. If false, the CIDR parameters for those subnets will be ignored. If true, it also requires that the 'Create private subnets' parameter is also true to have any effect.
    Type: String
    AllowedValues:
      - 'true'
      - 'false'
    Default: 'false'
  CreatePrivateSubnets:
    Description: Set to false to create only public subnets. If false, the CIDR parameters for ALL private subnets will be ignored.
    Type: String
    AllowedValues:
      - 'true'
      - 'false'
    Default: 'true'
  CreatePublicSubnets:
    Description: Set to false to create only private subnets. If false, the CIDR parameters for ALL public subnets will be ignored.
    Type: String
    AllowedValues:
      - 'true'
      - 'false'
    Default: 'true'
  NumberOfAZs:
    Description: Number of Availability Zones to use in the VPC. This must match your selections in the list of Availability Zones parameter.
    Type: String
    AllowedValues:
      - '2'
      - '3'
      - '4'
    Default: '2'
  PrivateSubnet1ACIDR:
    Description: CIDR block for private subnet 1A located in Availability Zone 1
    Type: String
    Default: 10.0.0.0/19
  PrivateSubnet1BCIDR:
    Description: CIDR block for private subnet 1B with dedicated network ACL located in Availability Zone 1
    Type: String
    Default: 10.0.192.0/21
  PrivateSubnet2ACIDR:
    Description: CIDR block for private subnet 2A located in Availability Zone 2
    Type: String
    Default: 10.0.32.0/19
  PrivateSubnet2BCIDR:
    Description: CIDR block for private subnet 2B with dedicated network ACL located in Availability Zone 2
    Type: String
    Default: 10.0.200.0/21
  PrivateSubnet3ACIDR:
    Description: CIDR block for private subnet 3A located in Availability Zone 3
    Type: String
    Default: 10.0.64.0/19
  PrivateSubnet3BCIDR:
    Description: CIDR block for private subnet 3B with dedicated network ACL located in Availability Zone 3
    Type: String
    Default: 10.0.208.0/21
  PrivateSubnet4ACIDR:
    Description: CIDR block for private subnet 4A located in Availability Zone 4
    Type: String
    Default: 10.0.96.0/19
  PrivateSubnet4BCIDR:
    Description: CIDR block for private subnet 4B with dedicated network ACL located in Availability Zone 4
    Type: String
    Default: 10.0.216.0/21
  PublicSubnet1CIDR:
    Description: CIDR block for the public DMZ subnet 1 located in Availability Zone 1
    Type: String
    Default: 10.0.128.0/20
  PublicSubnet2CIDR:
    Description: CIDR block for the public DMZ subnet 2 located in Availability Zone 2
    Type: String
    Default: 10.0.144.0/20
  PublicSubnet3CIDR:
    Description: CIDR block for the public DMZ subnet 3 located in Availability Zone 3
    Type: String
    Default: 10.0.160.0/20
  PublicSubnet4CIDR:
    Description: CIDR block for the public DMZ subnet 4 located in Availability Zone 4
    Type: String
    Default: 10.0.176.0/20
  VPCCIDR:
    Description: CIDR block for the VPC
    Type: String
    Default: 10.0.0.0/16
  LogsRetentionInDays:
    Description: Specifies the number of days you want to retain log events in the specified log group
    Type: Number
    AllowedValues: [1, 3, 5, 7, 14, 30, 60, 90, 120, 150, 180, 365, 400, 545, 731, 1827, 3653]
    Default: 90
  TransitVPC:
    Description: Do you want to connect this VPC to a transit VPC via tagging?
    AllowedValues:
      - 'true'
      - 'false'
    Type: String
    Default: 'false'
  InOutNetwork:
    Description: Internet and NatGateway'll be created later
    Type: String
    AllowedValues:
      - 'true'
      - 'false'
    Default: 'true'
##############################
#        Conditions          #
##############################
Conditions:
  PublicSubnetsCondition: !Equals [!Ref 'CreatePublicSubnets', 'true']
  3AZCondition: !Or [!Equals [!Ref 'NumberOfAZs', '3'], !Condition '4AZCondition']
  4AZCondition: !Equals [!Ref 'NumberOfAZs', '4']
  3AZPublicCondition: !And [!Condition '3AZCondition', !Condition 'PublicSubnetsCondition']
  4AZPublicCondition: !And [!Condition '4AZCondition', !Condition 'PublicSubnetsCondition']
  AdditionalPrivateSubnetsCondition: !And [!Equals [!Ref 'CreatePrivateSubnets', 'true'], !Equals [!Ref 'CreateAdditionalPrivateSubnets', 'true']]
  AdditionalPrivateSubnets&3AZCondition: !And [!Condition 'AdditionalPrivateSubnetsCondition', !Condition '3AZCondition']
  AdditionalPrivateSubnets&4AZCondition: !And [!Condition 'AdditionalPrivateSubnetsCondition', !Condition '4AZCondition']
  InternetGatewayCondition: !And [!Equals [!Ref 'CreatePublicSubnets', 'true'], !Equals [!Ref 'InOutNetwork', 'false']]
  NATGatewayCondition: !And [!Condition 'PrivateSubnetsCondition', !Condition 'PublicSubnetsCondition', !Equals [!Ref 'InOutNetwork', 'false']]
  NATGateway&3AZCondition: !And [!Condition 'NATGatewayCondition', !Condition '3AZCondition', !Equals [!Ref 'InOutNetwork', 'false']]
  NATGateway&4AZCondition: !And [!Condition 'NATGatewayCondition', !Condition '4AZCondition', !Equals [!Ref 'InOutNetwork', 'false']]
  AdditionalPrivateSubnets&NATGatewayCondition: !And [!Condition 'AdditionalPrivateSubnetsCondition', !Condition 'NATGatewayCondition', !Equals [!Ref 'InOutNetwork', 'false']]
  AdditionalPrivateSubnets&NATGateway&3AZCondition: !And [!Condition 'AdditionalPrivateSubnets&3AZCondition', !Condition 'NATGateway&3AZCondition', !Equals [!Ref 'InOutNetwork', 'false']]
  AdditionalPrivateSubnets&NATGateway&4AZCondition: !And [!Condition 'AdditionalPrivateSubnets&4AZCondition', !Condition 'NATGateway&4AZCondition', !Equals [!Ref 'InOutNetwork', 'false']]
  NVirginiaRegionCondition: !Equals [!Ref 'AWS::Region', us-east-1]
  PrivateSubnetsCondition: !Equals [!Ref 'CreatePrivateSubnets', 'true']
  PrivateSubnets&3AZCondition: !And [!Condition 'PrivateSubnetsCondition', !Condition '3AZCondition']
  PrivateSubnets&4AZCondition: !And [!Condition 'PrivateSubnetsCondition', !Condition '4AZCondition']
  Public&PrivateSubnetsCondition: !And [!Condition 'PublicSubnetsCondition', !Condition 'PrivateSubnetsCondition', !Equals [!Ref 'InOutNetwork', 'false']]
  Public&PrivateSubnets&3AZCondition: !And [!Condition 'PublicSubnetsCondition', !Condition 'PrivateSubnetsCondition', !Condition '3AZCondition', !Equals [!Ref 'InOutNetwork', 'false']]
  Public&PrivateSubnets&4AZCondition: !And [!Condition 'PublicSubnetsCondition', !Condition 'PrivateSubnetsCondition', !Condition '4AZCondition', !Equals [!Ref 'InOutNetwork', 'false']]
  S3VPCEndpointCondition: !And [!Condition 'PrivateSubnetsCondition', !Not [!Or [ !Equals [!Ref 'AWS::Region', us-gov-west-1], !Equals [!Ref 'AWS::Region', cn-north-1]]]]
  TransitVPCCondition: !Equals [!Ref 'TransitVPC', 'true']
##############################
#        Resources           #
##############################
Resources:
  DHCPOptions:
    Type: AWS::EC2::DHCPOptions
    Properties:
      DomainName: !If [NVirginiaRegionCondition, ec2.internal, !Join ['',[!Ref 'AWS::Region',.compute.internal]]]
      DomainNameServers:
        - AmazonProvidedDNS
  ##############################
  #            VPC             #
  ##############################
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref 'VPCCIDR'
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      Tags:
        - Key: Name
          Value: !Ref 'AWS::StackName'
        - !If
          - TransitVPCCondition
          - 
            - Key: transitvpc:spoke
              Value: true
          - !Ref 'AWS::NoValue'
  VPCDHCPOptionsAssociation:
    Type: AWS::EC2::VPCDHCPOptionsAssociation
    Properties:
      VpcId: !Ref 'VPC'
      DhcpOptionsId: !Ref 'DHCPOptions'
  ##############################
  #            IGW             #
  ##############################
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Condition: InternetGatewayCondition
    Properties:
      Tags:
        - Key: Network
          Value: Public
  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Condition: InternetGatewayCondition
    Properties:
      VpcId: !Ref 'VPC'
      InternetGatewayId: !Ref 'InternetGateway'
  ##############################
  #      Private Subnets       #
  ##############################
  PrivateSubnet1A:
    Condition: PrivateSubnetsCondition
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref 'VPC'
      CidrBlock: !Ref 'PrivateSubnet1ACIDR'
      AvailabilityZone: !Select ['0', !Ref 'AvailabilityZones']
      Tags:
        - Key: Name
          Value: Private subnet 1A
        - Key: Network
          Value: Private
  PrivateSubnet1B:
    Condition: AdditionalPrivateSubnetsCondition
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref 'VPC'
      CidrBlock: !Ref 'PrivateSubnet1BCIDR'
      AvailabilityZone: !Select ['0', !Ref 'AvailabilityZones']
      Tags:
        - Key: Name
          Value: Private subnet 1B
        - Key: Network
          Value: Private
  PrivateSubnet2A:
    Condition: PrivateSubnetsCondition
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref 'VPC'
      CidrBlock: !Ref 'PrivateSubnet2ACIDR'
      AvailabilityZone: !Select ['1', !Ref 'AvailabilityZones']
      Tags:
        - Key: Name
          Value: Private subnet 2A
        - Key: Network
          Value: Private
  PrivateSubnet2B:
    Condition: AdditionalPrivateSubnetsCondition
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref 'VPC'
      CidrBlock: !Ref 'PrivateSubnet2BCIDR'
      AvailabilityZone: !Select ['1', !Ref 'AvailabilityZones']
      Tags:
        - Key: Name
          Value: Private subnet 2B
        - Key: Network
          Value: Private
  PrivateSubnet3A:
    Condition: PrivateSubnets&3AZCondition
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref 'VPC'
      CidrBlock: !Ref 'PrivateSubnet3ACIDR'
      AvailabilityZone: !Select ['2', !Ref 'AvailabilityZones']
      Tags:
        - Key: Name
          Value: Private subnet 3A
        - Key: Network
          Value: Private
  PrivateSubnet3B:
    Condition: AdditionalPrivateSubnets&3AZCondition
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref 'VPC'
      CidrBlock: !Ref 'PrivateSubnet3BCIDR'
      AvailabilityZone: !Select ['2', !Ref 'AvailabilityZones']
      Tags:
        - Key: Name
          Value: Private subnet 3B
        - Key: Network
          Value: Private
  PrivateSubnet4A:
    Condition: PrivateSubnets&4AZCondition
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref 'VPC'
      CidrBlock: !Ref 'PrivateSubnet4ACIDR'
      AvailabilityZone: !Select ['3', !Ref 'AvailabilityZones']
      Tags:
        - Key: Name
          Value: Private subnet 4A
        - Key: Network
          Value: Private
  PrivateSubnet4B:
    Condition: AdditionalPrivateSubnets&4AZCondition
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref 'VPC'
      CidrBlock: !Ref 'PrivateSubnet4BCIDR'
      AvailabilityZone: !Select ['3', !Ref 'AvailabilityZones']
      Tags:
        - Key: Name
          Value: Private subnet 4B
        - Key: Network
          Value: Private
  ##############################
  #       Public Subnets       #
  ##############################
  PublicSubnet1:
    Condition: PublicSubnetsCondition
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref 'VPC'
      CidrBlock: !Ref 'PublicSubnet1CIDR'
      AvailabilityZone: !Select ['0', !Ref 'AvailabilityZones']
      Tags:
        - Key: Name
          Value: Public subnet 1
        - Key: Network
          Value: Public
      MapPublicIpOnLaunch: true
  PublicSubnet2:
    Condition: PublicSubnetsCondition
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref 'VPC'
      CidrBlock: !Ref 'PublicSubnet2CIDR'
      AvailabilityZone: !Select ['1', !Ref 'AvailabilityZones']
      Tags:
        - Key: Name
          Value: Public subnet 2
        - Key: Network
          Value: Public
      MapPublicIpOnLaunch: true
  PublicSubnet3:
    Condition: 3AZPublicCondition
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref 'VPC'
      CidrBlock: !Ref 'PublicSubnet3CIDR'
      AvailabilityZone: !Select ['2', !Ref 'AvailabilityZones']
      Tags:
        - Key: Name
          Value: Public subnet 3
        - Key: Network
          Value: Public
      MapPublicIpOnLaunch: true
  PublicSubnet4:
    Condition: 4AZPublicCondition
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref 'VPC'
      CidrBlock: !Ref 'PublicSubnet4CIDR'
      AvailabilityZone: !Select ['3', !Ref 'AvailabilityZones']
      Tags:
        - Key: Name
          Value: Public subnet 4
        - Key: Network
          Value: Public
      MapPublicIpOnLaunch: true
  ##############################
  #    PrivateA Route Tables   #
  ##############################
  PrivateSubnet1ARouteTable:
    Condition: PrivateSubnetsCondition
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'VPC'
      Tags:
        - Key: Name
          Value: Private subnet 1A
        - Key: Network
          Value: Private
  PrivateSubnet1ARoute:
    Condition: NATGatewayCondition
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref 'PrivateSubnet1ARouteTable'
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !If [NATGatewayCondition, !Ref 'NATGateway1', !Ref 'AWS::NoValue']
  PrivateSubnet1ARouteTableAssociation:
    Condition: PrivateSubnetsCondition
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref 'PrivateSubnet1A'
      RouteTableId: !Ref 'PrivateSubnet1ARouteTable'
  PrivateSubnet2ARouteTable:
    Condition: PrivateSubnetsCondition
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'VPC'
      Tags:
        - Key: Name
          Value: Private subnet 2A
        - Key: Network
          Value: Private
  PrivateSubnet2ARoute:
    Condition: NATGatewayCondition
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref 'PrivateSubnet2ARouteTable'
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !If [NATGatewayCondition, !Ref 'NATGateway2', !Ref 'AWS::NoValue']
  PrivateSubnet2ARouteTableAssociation:
    Condition: PrivateSubnetsCondition
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref 'PrivateSubnet2A'
      RouteTableId: !Ref 'PrivateSubnet2ARouteTable'
  PrivateSubnet3ARouteTable:
    Condition: PrivateSubnets&3AZCondition
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'VPC'
      Tags:
        - Key: Name
          Value: Private subnet 3A
        - Key: Network
          Value: Private
  PrivateSubnet3ARoute:
    Condition: NATGateway&3AZCondition
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref 'PrivateSubnet3ARouteTable'
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !If [NATGatewayCondition, !Ref 'NATGateway3', !Ref 'AWS::NoValue']
  PrivateSubnet3ARouteTableAssociation:
    Condition: PrivateSubnets&3AZCondition
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref 'PrivateSubnet3A'
      RouteTableId: !Ref 'PrivateSubnet3ARouteTable'
  PrivateSubnet4ARouteTable:
    Condition: PrivateSubnets&4AZCondition
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'VPC'
      Tags:
        - Key: Name
          Value: Private subnet 4A
        - Key: Network
          Value: Private
  PrivateSubnet4ARoute:
    Condition: NATGateway&4AZCondition
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref 'PrivateSubnet4ARouteTable'
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !If [NATGatewayCondition, !Ref 'NATGateway4', !Ref 'AWS::NoValue']
  PrivateSubnet4ARouteTableAssociation:
    Condition: PrivateSubnets&4AZCondition
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref 'PrivateSubnet4A'
      RouteTableId: !Ref 'PrivateSubnet4ARouteTable'
  ##############################
  #    PrivateB Route Tables   #
  ##############################
  PrivateSubnet1BRouteTable:
    Condition: AdditionalPrivateSubnetsCondition
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'VPC'
      Tags:
        - Key: Name
          Value: Private subnet 1B
        - Key: Network
          Value: Private
  PrivateSubnet1BRoute:
    Condition: AdditionalPrivateSubnets&NATGatewayCondition
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref 'PrivateSubnet1BRouteTable'
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !If [NATGatewayCondition, !Ref 'NATGateway1', !Ref 'AWS::NoValue']
  PrivateSubnet1BRouteTableAssociation:
    Condition: AdditionalPrivateSubnetsCondition
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref 'PrivateSubnet1B'
      RouteTableId: !Ref 'PrivateSubnet1BRouteTable'
  PrivateSubnet1BNetworkAcl:
    Condition: AdditionalPrivateSubnetsCondition
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref 'VPC'
      Tags:
        - Key: Name
          Value: NACL Protected subnet 1
        - Key: Network
          Value: NACL Protected
  PrivateSubnet1BNetworkAclEntryInbound:
    Condition: AdditionalPrivateSubnetsCondition
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: 0.0.0.0/0
      Egress: 'false'
      NetworkAclId: !Ref 'PrivateSubnet1BNetworkAcl'
      Protocol: '-1'
      RuleAction: allow
      RuleNumber: '100'
  PrivateSubnet1BNetworkAclEntryOutbound:
    Condition: AdditionalPrivateSubnetsCondition
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: 0.0.0.0/0
      Egress: 'true'
      NetworkAclId: !Ref 'PrivateSubnet1BNetworkAcl'
      Protocol: '-1'
      RuleAction: allow
      RuleNumber: '100'
  PrivateSubnet1BNetworkAclAssociation:
    Condition: AdditionalPrivateSubnetsCondition
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref 'PrivateSubnet1B'
      NetworkAclId: !Ref 'PrivateSubnet1BNetworkAcl'
  PrivateSubnet2BRouteTable:
    Condition: AdditionalPrivateSubnetsCondition
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'VPC'
      Tags:
        - Key: Name
          Value: Private subnet 2B
        - Key: Network
          Value: Private
  PrivateSubnet2BRoute:
    Condition: AdditionalPrivateSubnets&NATGatewayCondition
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref 'PrivateSubnet2BRouteTable'
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !If [NATGatewayCondition, !Ref 'NATGateway2', !Ref 'AWS::NoValue']
  PrivateSubnet2BRouteTableAssociation:
    Condition: AdditionalPrivateSubnetsCondition
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref 'PrivateSubnet2B'
      RouteTableId: !Ref 'PrivateSubnet2BRouteTable'
  PrivateSubnet2BNetworkAcl:
    Condition: AdditionalPrivateSubnetsCondition
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref 'VPC'
      Tags:
        - Key: Name
          Value: NACL Protected subnet 2
        - Key: Network
          Value: NACL Protected
  PrivateSubnet2BNetworkAclEntryInbound:
    Condition: AdditionalPrivateSubnetsCondition
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: 0.0.0.0/0
      Egress: 'false'
      NetworkAclId: !Ref 'PrivateSubnet2BNetworkAcl'
      Protocol: '-1'
      RuleAction: allow
      RuleNumber: '100'
  PrivateSubnet2BNetworkAclEntryOutbound:
    Condition: AdditionalPrivateSubnetsCondition
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: 0.0.0.0/0
      Egress: 'true'
      NetworkAclId: !Ref 'PrivateSubnet2BNetworkAcl'
      Protocol: '-1'
      RuleAction: allow
      RuleNumber: '100'
  PrivateSubnet2BNetworkAclAssociation:
    Condition: AdditionalPrivateSubnetsCondition
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref 'PrivateSubnet2B'
      NetworkAclId: !Ref 'PrivateSubnet2BNetworkAcl'
  PrivateSubnet3BRouteTable:
    Condition: AdditionalPrivateSubnets&3AZCondition
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'VPC'
      Tags:
        - Key: Name
          Value: Private subnet 3B
        - Key: Network
          Value: Private
  PrivateSubnet3BRoute:
    Condition: AdditionalPrivateSubnets&NATGateway&3AZCondition
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref 'PrivateSubnet3BRouteTable'
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !If [NATGatewayCondition, !Ref 'NATGateway3', !Ref 'AWS::NoValue']
  PrivateSubnet3BRouteTableAssociation:
    Condition: AdditionalPrivateSubnets&3AZCondition
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref 'PrivateSubnet3B'
      RouteTableId: !Ref 'PrivateSubnet3BRouteTable'
  PrivateSubnet3BNetworkAcl:
    Condition: AdditionalPrivateSubnets&3AZCondition
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref 'VPC'
      Tags:
        - Key: Name
          Value: NACL Protected subnet 3
        - Key: Network
          Value: NACL Protected
  PrivateSubnet3BNetworkAclEntryInbound:
    Condition: AdditionalPrivateSubnets&3AZCondition
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: 0.0.0.0/0
      Egress: 'false'
      NetworkAclId: !Ref 'PrivateSubnet3BNetworkAcl'
      Protocol: '-1'
      RuleAction: allow
      RuleNumber: '100'
  PrivateSubnet3BNetworkAclEntryOutbound:
    Condition: AdditionalPrivateSubnets&3AZCondition
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: 0.0.0.0/0
      Egress: 'true'
      NetworkAclId: !Ref 'PrivateSubnet3BNetworkAcl'
      Protocol: '-1'
      RuleAction: allow
      RuleNumber: '100'
  PrivateSubnet3BNetworkAclAssociation:
    Condition: AdditionalPrivateSubnets&3AZCondition
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref 'PrivateSubnet3B'
      NetworkAclId: !Ref 'PrivateSubnet3BNetworkAcl'
  PrivateSubnet4BRouteTable:
    Condition: AdditionalPrivateSubnets&4AZCondition
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'VPC'
      Tags:
        - Key: Name
          Value: Private subnet 4B
        - Key: Network
          Value: Private
  PrivateSubnet4BRoute:
    Condition: AdditionalPrivateSubnets&NATGateway&4AZCondition
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref 'PrivateSubnet4BRouteTable'
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !If [NATGatewayCondition, !Ref 'NATGateway4', !Ref 'AWS::NoValue']
  PrivateSubnet4BRouteTableAssociation:
    Condition: AdditionalPrivateSubnets&4AZCondition
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref 'PrivateSubnet4B'
      RouteTableId: !Ref 'PrivateSubnet4BRouteTable'
  PrivateSubnet4BNetworkAcl:
    Condition: AdditionalPrivateSubnets&4AZCondition
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref 'VPC'
      Tags:
        - Key: Name
          Value: NACL Protected subnet 4
        - Key: Network
          Value: NACL Protected
  PrivateSubnet4BNetworkAclEntryInbound:
    Condition: AdditionalPrivateSubnets&4AZCondition
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: 0.0.0.0/0
      Egress: 'false'
      NetworkAclId: !Ref 'PrivateSubnet4BNetworkAcl'
      Protocol: '-1'
      RuleAction: allow
      RuleNumber: '100'
  PrivateSubnet4BNetworkAclEntryOutbound:
    Condition: AdditionalPrivateSubnets&4AZCondition
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: 0.0.0.0/0
      Egress: 'true'
      NetworkAclId: !Ref 'PrivateSubnet4BNetworkAcl'
      Protocol: '-1'
      RuleAction: allow
      RuleNumber: '100'
  PrivateSubnet4BNetworkAclAssociation:
    Condition: AdditionalPrivateSubnets&4AZCondition
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref 'PrivateSubnet4B'
      NetworkAclId: !Ref 'PrivateSubnet4BNetworkAcl'
  ##############################
  #     Public Route Tables    #
  ##############################
  PublicSubnetRouteTable:
    Condition: PublicSubnetsCondition
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'VPC'
      Tags:
        - Key: Name
          Value: Public Subnets
        - Key: Network
          Value: Public
  PublicSubnetRoute:
    Condition: InternetGatewayCondition
    DependsOn: VPCGatewayAttachment
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref 'PublicSubnetRouteTable'
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref 'InternetGateway'
  PublicSubnet1RouteTableAssociation:
    Condition: PublicSubnetsCondition
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref 'PublicSubnet1'
      RouteTableId: !Ref 'PublicSubnetRouteTable'
  PublicSubnet2RouteTableAssociation:
    Condition: PublicSubnetsCondition
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref 'PublicSubnet2'
      RouteTableId: !Ref 'PublicSubnetRouteTable'
  PublicSubnet3RouteTableAssociation:
    Condition: 3AZPublicCondition
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref 'PublicSubnet3'
      RouteTableId: !Ref 'PublicSubnetRouteTable'
  PublicSubnet4RouteTableAssociation:
    Condition: 4AZPublicCondition
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref 'PublicSubnet4'
      RouteTableId: !Ref 'PublicSubnetRouteTable'
  ##############################
  #          NAT EIP's         #
  ##############################
  NAT1EIP:
    Condition: Public&PrivateSubnetsCondition
    DependsOn: VPCGatewayAttachment
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  NAT2EIP:
    Condition: Public&PrivateSubnetsCondition
    DependsOn: VPCGatewayAttachment
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  NAT3EIP:
    Condition: Public&PrivateSubnets&3AZCondition
    DependsOn: VPCGatewayAttachment
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  NAT4EIP:
    Condition: Public&PrivateSubnets&4AZCondition
    DependsOn: VPCGatewayAttachment
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  ##############################
  #          NAT GW's          #
  ##############################
  NATGateway1:
    Condition: NATGatewayCondition
    DependsOn: VPCGatewayAttachment
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt 'NAT1EIP.AllocationId'
      SubnetId: !Ref 'PublicSubnet1'
  NATGateway2:
    Condition: NATGatewayCondition
    DependsOn: VPCGatewayAttachment
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt 'NAT2EIP.AllocationId'
      SubnetId: !Ref 'PublicSubnet2'
  NATGateway3:
    Condition: NATGateway&3AZCondition
    DependsOn: VPCGatewayAttachment
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt 'NAT3EIP.AllocationId'
      SubnetId: !Ref 'PublicSubnet3'
  NATGateway4:
    Condition: NATGateway&4AZCondition
    DependsOn: VPCGatewayAttachment
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt 'NAT4EIP.AllocationId'
      SubnetId: !Ref 'PublicSubnet4'
  ##############################
  #      AWS VPC ENDPOINTS     #
  ##############################
  S3VPCEndpoint:
    Condition: S3VPCEndpointCondition
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Action: '*'
            Effect: Allow
            Resource: '*'
            Principal: '*'
      RouteTableIds:
        - !Ref 'PrivateSubnet1ARouteTable'
        - !Ref 'PrivateSubnet2ARouteTable'
        - !If [PrivateSubnets&3AZCondition, !Ref 'PrivateSubnet3ARouteTable', !Ref 'AWS::NoValue']
        - !If [PrivateSubnets&4AZCondition, !Ref 'PrivateSubnet4ARouteTable', !Ref 'AWS::NoValue']
        - !If [AdditionalPrivateSubnetsCondition, !Ref 'PrivateSubnet1BRouteTable', !Ref 'AWS::NoValue']
        - !If [AdditionalPrivateSubnetsCondition, !Ref 'PrivateSubnet2BRouteTable', !Ref 'AWS::NoValue']
        - !If [AdditionalPrivateSubnets&3AZCondition, !Ref 'PrivateSubnet3BRouteTable', !Ref 'AWS::NoValue']
        - !If [AdditionalPrivateSubnets&4AZCondition, !Ref 'PrivateSubnet4BRouteTable', !Ref 'AWS::NoValue']
      ServiceName: !Join ['', [com.amazonaws., !Ref 'AWS::Region', .s3]]
      VpcId: !Ref 'VPC'
  ##############################
  #         VPC FLOWLOG        #
  ##############################
  VPCFlowLogsLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      RetentionInDays: !Ref LogsRetentionInDays
  VPCFlowLogsRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - 
            Effect: Allow
            Principal:
              Service:
                - vpc-flow-logs.amazonaws.com
            Action:
              - sts:AssumeRole
      Path: /
      Policies:
        - 
          PolicyName: LogRolePolicy
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - 
                Effect: Allow
                Action:
                  - logs:CreateLogGroup
                  - logs:CreateLogStream
                  - logs:DescribeLogGroups
                  - logs:DescribeLogStreams
                  - logs:PutLogEvents
                Resource: '*'
  VPCFlowLog:
    Type: AWS::EC2::FlowLog
    Properties:
      DeliverLogsPermissionArn: !GetAtt 'VPCFlowLogsRole.Arn'
      LogGroupName: !Ref 'VPCFlowLogsLogGroup'
      ResourceId: !Ref 'VPC'
      ResourceType: VPC
      TrafficType: ALL
##############################
#          OUTPUTS           #
##############################
Outputs:
    NAT1EIP:
      Condition: Public&PrivateSubnetsCondition
      Description: NAT 1 IP address
      Value: !Ref 'NAT1EIP'
      Export:
        Name: !Sub '${AWS::StackName}-NAT1EIP'
    NAT2EIP:
      Condition: Public&PrivateSubnetsCondition
      Description: NAT 2 IP address
      Value: !Ref 'NAT2EIP'
      Export:
        Name: !Sub '${AWS::StackName}-NAT2EIP'
    NAT3EIP:
      Condition: Public&PrivateSubnets&3AZCondition
      Description: NAT 3 IP address
      Value: !Ref 'NAT3EIP'
      Export:
        Name: !Sub '${AWS::StackName}-NAT3EIP'
    NAT4EIP:
      Condition: Public&PrivateSubnets&4AZCondition
      Description: NAT 4 IP address
      Value: !Ref 'NAT4EIP'
      Export:
        Name: !Sub '${AWS::StackName}-NAT4EIP'
    PrivateSubnet1ACIDR:
      Condition: PrivateSubnetsCondition
      Description: Private subnet 1A CIDR in Availability Zone 1
      Value: !Ref 'PrivateSubnet1ACIDR'
      Export:
        Name: !Sub '${AWS::StackName}-PrivateSubnet1ACIDR'
    PrivateSubnet1AID:
      Condition: PrivateSubnetsCondition
      Description: Private subnet 1A ID in Availability Zone 1
      Value: !Ref 'PrivateSubnet1A'
      Export:
        Name: !Sub '${AWS::StackName}-PrivateSubnet1AID'
    PrivateSubnet1BCIDR:
      Condition: AdditionalPrivateSubnetsCondition
      Description: Private subnet 1B CIDR in Availability Zone 1
      Value: !Ref 'PrivateSubnet1BCIDR'
      Export:
        Name: !Sub '${AWS::StackName}-PrivateSubnet1BCIDR'
    PrivateSubnet1BID:
      Condition: AdditionalPrivateSubnetsCondition
      Description: Private subnet 1B ID in Availability Zone 1
      Value: !Ref 'PrivateSubnet1B'
      Export:
        Name: !Sub '${AWS::StackName}-PrivateSubnet1BID'
    PrivateSubnet2ACIDR:
      Condition: PrivateSubnetsCondition
      Description: Private subnet 2A CIDR in Availability Zone 2
      Value: !Ref 'PrivateSubnet2ACIDR'
      Export:
        Name: !Sub '${AWS::StackName}-PrivateSubnet2ACIDR'
    PrivateSubnet2AID:
      Condition: PrivateSubnetsCondition
      Description: Private subnet 2A ID in Availability Zone 2
      Value: !Ref 'PrivateSubnet2A'
      Export:
        Name: !Sub '${AWS::StackName}-PrivateSubnet2AID'
    PrivateSubnet2BCIDR:
      Condition: AdditionalPrivateSubnetsCondition
      Description: Private subnet 2B CIDR in Availability Zone 2
      Value: !Ref 'PrivateSubnet2BCIDR'
      Export:
        Name: !Sub '${AWS::StackName}-PrivateSubnet2BCIDR'
    PrivateSubnet2BID:
      Condition: AdditionalPrivateSubnetsCondition
      Description: Private subnet 2B ID in Availability Zone 2
      Value: !Ref 'PrivateSubnet2B'
      Export:
        Name: !Sub '${AWS::StackName}-PrivateSubnet2BID'
    PrivateSubnet3ACIDR:
      Condition: PrivateSubnets&3AZCondition
      Description: Private subnet 3A CIDR in Availability Zone 3
      Value: !Ref 'PrivateSubnet3ACIDR'
      Export:
        Name: !Sub '${AWS::StackName}-PrivateSubnet3ACIDR'
    PrivateSubnet3AID:
      Condition: PrivateSubnets&3AZCondition
      Description: Private subnet 3A ID in Availability Zone 3
      Value: !Ref 'PrivateSubnet3A'
      Export:
        Name: !Sub '${AWS::StackName}-PrivateSubnet3AID'
    PrivateSubnet3BCIDR:
      Condition: AdditionalPrivateSubnets&3AZCondition
      Description: Private subnet 3B CIDR in Availability Zone 3
      Value: !Ref 'PrivateSubnet3BCIDR'
      Export:
        Name: !Sub '${AWS::StackName}-PrivateSubnet3BCIDR'
    PrivateSubnet3BID:
      Condition: AdditionalPrivateSubnets&3AZCondition
      Description: Private subnet 3B ID in Availability Zone 3
      Value: !Ref 'PrivateSubnet3B'
      Export:
        Name: !Sub '${AWS::StackName}-PrivateSubnet3BID'
    PrivateSubnet4ACIDR:
      Condition: PrivateSubnets&4AZCondition
      Description: Private subnet 4A CIDR in Availability Zone 4
      Value: !Ref 'PrivateSubnet4ACIDR'
      Export:
        Name: !Sub '${AWS::StackName}-PrivateSubnet4ACIDR'
    PrivateSubnet4AID:
      Condition: PrivateSubnets&4AZCondition
      Description: Private subnet 4A ID in Availability Zone 4
      Value: !Ref 'PrivateSubnet4A'
      Export:
        Name: !Sub '${AWS::StackName}-PrivateSubnet4AID'
    PrivateSubnet4BCIDR:
      Condition: AdditionalPrivateSubnets&4AZCondition
      Description: Private subnet 4B CIDR in Availability Zone 4
      Value: !Ref 'PrivateSubnet4BCIDR'
      Export:
        Name: !Sub '${AWS::StackName}-PrivateSubnet4BCIDR'
    PrivateSubnet4BID:
      Condition: AdditionalPrivateSubnets&4AZCondition
      Description: Private subnet 4B ID in Availability Zone 4
      Value: !Ref 'PrivateSubnet4B'
      Export:
        Name: !Sub '${AWS::StackName}-PrivateSubnet4BID'
    PublicSubnet1CIDR:
      Condition: PublicSubnetsCondition
      Description: Public subnet 1 CIDR in Availability Zone 1
      Value: !Ref 'PublicSubnet1CIDR'
      Export:
        Name: !Sub '${AWS::StackName}-PublicSubnet1CIDR'
    PublicSubnet1ID:
      Condition: PublicSubnetsCondition
      Description: Public subnet 1 ID in Availability Zone 1
      Value: !Ref 'PublicSubnet1'
      Export:
        Name: !Sub '${AWS::StackName}-PublicSubnet1ID'
    PublicSubnet2CIDR:
      Condition: PublicSubnetsCondition
      Description: Public subnet 2 CIDR in Availability Zone 2
      Value: !Ref 'PublicSubnet2CIDR'
      Export:
        Name: !Sub '${AWS::StackName}-PublicSubnet2CIDR'
    PublicSubnet2ID:
      Condition: PublicSubnetsCondition
      Description: Public subnet 2 ID in Availability Zone 2
      Value: !Ref 'PublicSubnet2'
      Export:
        Name: !Sub '${AWS::StackName}-PublicSubnet2ID'
    PublicSubnet3CIDR:
      Condition: 3AZPublicCondition
      Description: Public subnet 3 CIDR in Availability Zone 3
      Value: !Ref 'PublicSubnet3CIDR'
      Export:
        Name: !Sub '${AWS::StackName}-PublicSubnet3CIDR'
    PublicSubnet3ID:
      Condition: 3AZPublicCondition
      Description: Public subnet 3 ID in Availability Zone 3
      Value: !Ref 'PublicSubnet3'
      Export:
        Name: !Sub '${AWS::StackName}-PublicSubnet3ID'
    PublicSubnet4CIDR:
      Condition: 4AZPublicCondition
      Description: Public subnet 4 CIDR in Availability Zone 4
      Value: !Ref 'PublicSubnet4CIDR'
      Export:
        Name: !Sub '${AWS::StackName}-PublicSubnet4CIDR'
    PublicSubnet4ID:
      Condition: 4AZPublicCondition
      Description: Public subnet 4 ID in Availability Zone 4
      Value: !Ref 'PublicSubnet4'
      Export:
        Name: !Sub '${AWS::StackName}-PublicSubnet4ID'
    S3VPCEndpoint:
      Condition: S3VPCEndpointCondition
      Description: S3 VPC Endpoint
      Value: !Ref 'S3VPCEndpoint'
      Export:
        Name: !Sub '${AWS::StackName}-S3VPCEndpoint'
    PrivateSubnet1ARouteTable:
      Condition: PrivateSubnetsCondition
      Value: !Ref 'PrivateSubnet1ARouteTable'
      Description: Private subnet 1A route table
      Export:
        Name: !Sub '${AWS::StackName}-PrivateSubnet1ARouteTable'
    PrivateSubnet1BRouteTable:
      Condition: AdditionalPrivateSubnetsCondition
      Value: !Ref 'PrivateSubnet1BRouteTable'
      Description: Private subnet 1B route table
      Export:
        Name: !Sub '${AWS::StackName}-PrivateSubnet1BRouteTable'
    PrivateSubnet2ARouteTable:
      Condition: PrivateSubnetsCondition
      Value: !Ref 'PrivateSubnet2ARouteTable'
      Description: Private subnet 2A route table
      Export:
        Name: !Sub '${AWS::StackName}-PrivateSubnet2ARouteTable'
    PrivateSubnet2BRouteTable:
      Condition: AdditionalPrivateSubnetsCondition
      Value: !Ref 'PrivateSubnet2BRouteTable'
      Description: Private subnet 2B route table
      Export:
        Name: !Sub '${AWS::StackName}-PrivateSubnet2BRouteTable'
    PrivateSubnet3ARouteTable:
      Condition: PrivateSubnets&3AZCondition
      Value: !Ref 'PrivateSubnet3ARouteTable'
      Description: Private subnet 3A route table
      Export:
        Name: !Sub '${AWS::StackName}-PrivateSubnet3ARouteTable'
    PrivateSubnet3BRouteTable:
      Condition: AdditionalPrivateSubnets&3AZCondition
      Value: !Ref 'PrivateSubnet3BRouteTable'
      Description: Private subnet 3B route table
      Export:
        Name: !Sub '${AWS::StackName}-PrivateSubnet3BRouteTable'
    PrivateSubnet4ARouteTable:
      Condition: PrivateSubnets&4AZCondition
      Value: !Ref 'PrivateSubnet4ARouteTable'
      Description: Private subnet 4A route table
      Export:
        Name: !Sub '${AWS::StackName}-PrivateSubnet4ARouteTable'
    PrivateSubnet4BRouteTable:
      Condition: AdditionalPrivateSubnets&4AZCondition
      Value: !Ref 'PrivateSubnet4BRouteTable'
      Description: Private subnet 4B route table
      Export:
        Name: !Sub '${AWS::StackName}-PrivateSubnet4BRouteTable'
    PublicSubnetRouteTable:
      Condition: PublicSubnetsCondition
      Value: !Ref 'PublicSubnetRouteTable'
      Description: Public subnet route table
      Export:
        Name: !Sub '${AWS::StackName}-PublicSubnetRouteTable'
    PrivateSubnetRouteTables:
      Value: !Join
        - ','
        - 
          - !If [PrivateSubnetsCondition, !Ref 'PrivateSubnet1ARouteTable', !Ref 'AWS::NoValue']
          - !If [PrivateSubnetsCondition, !Ref 'PrivateSubnet2ARouteTable', !Ref 'AWS::NoValue']
          - !If [AdditionalPrivateSubnetsCondition, !Ref 'PrivateSubnet1BRouteTable', !Ref 'AWS::NoValue']
          - !If [AdditionalPrivateSubnetsCondition, !Ref 'PrivateSubnet2BRouteTable', !Ref 'AWS::NoValue']
          - !If [PrivateSubnets&3AZCondition, !Ref 'PrivateSubnet3ARouteTable', !Ref 'AWS::NoValue']
          - !If [PrivateSubnets&4AZCondition, !Ref 'PrivateSubnet4ARouteTable', !Ref 'AWS::NoValue']
          - !If [AdditionalPrivateSubnets&3AZCondition, !Ref 'PrivateSubnet3BRouteTable', !Ref 'AWS::NoValue']
          - !If [AdditionalPrivateSubnets&4AZCondition, !Ref 'PrivateSubnet4BRouteTable', !Ref 'AWS::NoValue']
      Description: List of private subnet route tables
    VPCCIDR:
      Value: !Ref 'VPCCIDR'
      Description: VPC CIDR
      Export:
        Name: !Sub '${AWS::StackName}-VPCCIDR'
    VPCID:
      Value: !Ref 'VPC'
      Description: VPC ID
      Export:
        Name: DefaultVPCId
    VPCRegion:
      Value: !Ref AWS::Region
      Description: VPC Region
